change in navbar

--- a/Raul/static/Raul/main.css
+++ b/Raul/static/Raul/main.css
@@ -1076,7 +1076,7 @@ nav ul li a:hover{
     }
 
     header{
-        background:#595959; /*Change to transparent*/
+        background:white; /*Change to transparent*/
     }
 
     figure{
@@ -1348,49 +1348,68 @@ nav ul li a:hover{
     }
 
     #category{
-        width:100%;
+        width: 100%;
         height:0%;
         overflow: hidden;
-        background-color: rgba(0,0,0,0.95);
+        background-color: black;
         position: fixed;
         left:0;
         top:0;
-        color: #cfbb63;
-        font-family: 'Roboto Condensed', sans-serif;
+        color: white;
+        font-family: 'Roboto', sans-serif;
         display: flex;
         flex-wrap: nowrap;
         flex-direction: row;
         transition: 0.4s ease-in-out;
-        z-index:100;
+        z-index:98;
         justify-content: center;
     }
 
     .dropDownMenu{
         float: left;
         overflow: hidden;
+        padding:30px;
     }
 
     .dropDownMenu .dropDownButton{
         border:none;
         outline:none;
         color:white;
-        padding:14px 16px;
-        margin:0;
+        font-size: 16px;
+        font-family: 'Roboto',sans-serif;
+        background-color:transparent;
+        margin-top:60px;
     }
 
     .dropDownContent{
         display: none;
-        position: absolute;
+        position: fixed;
         left: 0;
-        background-color: red;
+        background-color: black;
         width: 100%;
+        padding:50px;
         z-index: 1;
+        
     }
 
     .dropDownContent a{
         color:white;
         text-decoration: none;
-        float: left;
+        padding:30px;
+        text-align: center;
+        
+    }
+
+    .dropDownContent a:hover{
+        font-family: 'Roboto Condensed', sans-serif;
+        letter-spacing: 0.05em;
+        cursor: pointer;
+    }
+
+    .dropDownButton:hover{
+        font-family: 'Roboto Condensed', sans-serif;
+        letter-spacing: 0.05em;
+        cursor: pointer;
     }
 
     .dropDownMenu:hover .dropDownContent{
@@ -1399,6 +1418,7 @@ nav ul li a:hover{
 
     #category p{
         padding:30px;
+        margin-top:60px;
     }
 
     #category p:hover{
