--- a/Raul/templates/Raul/cart.html
+++ b/Raul/templates/Raul/cart.html
@@ -21,13 +21,13 @@
                 <div class="row">
                     <div class="col-md-12 col-lg-8">
                         <div class="items">
-                            {% for items in cartitem.cartitem_set.all %}
+                            {% for item in cart.cartitem_set.all %}
                             <div class="product">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <a href="{% url 'Raul-single' items.product.slug %}" >
-                                        <img class="img-fluid mx-auto d-block image" src="{{items.product.image.url}}">
-                                        <a href="{% url 'update_cart' items.product.slug %}?qty=0">remove</a>
+                                        <a href="{% url 'Raul-single' item.product.slug %}" >
+                                        <img class="img-fluid mx-auto d-block image" src="{{item.product.image.url}}">
+                                        <a href="{% url 'update_cart' item.product.slug %}?qty=0">remove</a>
                                     </div>
                                     <div class="col-md-8">
                                         <div class="info">
@@ -35,9 +35,9 @@
                                                 <div class="col-md-5 product-name">
                                                     <div class="product-name">
 
-                                                        <a href="{% url 'Raul-single' items.slug %}">{{items.product.price}}</a>
+                                                        <a href="{% url 'Raul-single' item.product.slug %}">{{item.product}}</a>
                                                         <div class="product-info">
-                                                            <div>Display: <span class="value">studded vase ${{items.product.price}}
+                                                            <div>Display: <span class="value">studded vase ${{item.product.price}}
 																	Metal Vase Bronze 5 H x 5 W</span></div>
                                                         </div>
                                                     </div>
