--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -5,6 +5,7 @@
     <h1>{{user.email}}</h1>
     {% for user in userorders %}
         {{ user.product }}
+        {{ user.product.price }}
     {% endfor %}
     {% for userAdd in userAddress %}
         {{ userAdd.state}}
