--- a/Raul/static/Raul/main.css
+++ b/Raul/static/Raul/main.css
@@ -4,7 +4,8 @@
   html,body{
     margin:0;
     padding:0;
-    height:100%;font-family: 'Oswald', sans-serif;    overflow-x: hidden;
+    height:100%;font-family: 'Oswald', sans-serif;    
+    overflow-x: hidden;
     background-color: #595959;
     scroll-behavior: smooth;
     scroll-snap-type: mandatory;
@@ -93,20 +94,22 @@ figure img{
 .menuBar{
     width:50px;
     cursor: pointer;
+    z-index: 101;
 }
 
 nav ul{
     position: fixed;
     width: 100%;
-    background: #2E1114;
+    background: rgba(0,0,0,0.9);
     left:0;
     top:0;
     height: 0;
-    margin-top:0;
+    margin:0;
     list-style: none;
     overflow-x: hidden;
     transition: 0.5s ease-in-out;
-    z-index: 1;
+    z-index: 150;
+    padding-inline-start: 0px;
 }
 
 nav ul li a:hover{
@@ -118,176 +121,6 @@ nav ul li a:hover{
 .exitButton img{
     width: 25px;
     cursor: pointer;
-}
-
-.loginSlide{
-    position: fixed;
-    width:100%;
-    background-color: #2E1114;
-    background-color: rgba(0,0,0,0.85);
-    left:0;
-    top:0;
-    height: 0;
-    margin-top:0;
-    list-style: none;
-    overflow-x: hidden;
-    transition: 0.5s ease-in-out;
-    z-index: 1;
-    display: grid;
-    grid-template-columns: 47.5% 5% 47.5%;
-    font-family: 'Oswald', sans-serif;}
-
-.loginText input[type=email]{
-    background:transparent;
-    outline: none;
-    border: none;
-    font-size: 1.7em;
-    text-align: right;
-    color:white;
-    transition: 0.5s ease;
-    padding:0.5em;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    border-bottom: 1px solid white;
-}
-
-.loginText input[type=email]:focus{
-    border-bottom: 1px solid white;
-    color:white;
-    outline:none;
-}
-
-.loginText input[type=password]{
-    background:transparent;
-    outline: none;
-    border: none;
-    font-size: 1.7em;
-    text-align: right;
-    color:white;
-    transition: 0.5s ease;
-    padding:0.5em;
-    margin-right: auto;
-    margin-left: auto;
-    display: block;
-    border-bottom: 1px solid white;
-}
-
-
-.loginText input[type=password]:focus{
-    border-bottom: 1px solid white;
-    color:white;
-    outline:none;
-}
-
-.loginText input[type=submit]{
-    background:transparent;
-    font-family: 'Oswald', sans-serif;    outline: none;
-    border: none;
-    color: white;
-    transition: 0.5s ease;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    border: 2px solid white;
-    font-weight: bold;
-    
-}
-
-.loginText input[type=submit]:hover{
-    box-shadow: inset 518px 0px 0px white;
-    color:#2E1114;
-    font-weight: bolder;
-    cursor: pointer;
-}
-
-.loginText label{
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.loginText a{
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.signUp input[type=email]{
-    background:transparent;
-    outline: none;
-    border: none;
-    font-size: 1.7em;
-    text-align: right;
-    color:white;
-    transition: 0.5s ease;
-    padding:0.5em;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    border-bottom: 1px solid white;
-}
-
-.signUp input[type=email]:focus{
-    border-bottom: 1px solid white;
-    color:white;
-    outline:none;
-}
-
-.signUp input[type=password]{
-    background:transparent;
-    outline: none;
-    border: none;
-    font-size: 1.7em;
-    text-align: right;
-    color:white;
-    transition: 0.5s ease;
-    padding:0.5em;
-    margin-right: auto;
-    margin-left: auto;
-    display: block;
-    border-bottom: 1px solid white;
-}
-
-
-.signUp input[type=password]:focus{
-    border-bottom: 1px solid white;
-    color:white;
-    outline:none;
-}
-
-.signUp input[type=submit]{
-    background:transparent;
-    font-family: 'Oswald', sans-serif;    outline: none;
-    border: none;
-    color: white;
-    transition: 0.5s ease;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    border: 2px solid white;
-    font-weight: bold;
-    
-}
-
-.signUp input[type=submit]:hover{
-    box-shadow: inset 518px 0px 0px white;
-    color:#2E1114;
-    font-weight: bolder;
-    cursor: pointer;
-}
-
-.signUp label{
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.signUp a{
-    margin-right: auto;
-    margin-left: auto;
-}
-
-#arrow:hover{
-    cursor: pointer;
-    width:60px;
 }
 
 /* Scroll Bar*/
@@ -362,18 +195,33 @@ nav ul li a:hover{
 
 @media only screen and (max-width:640px){
 
+    html,body{
+        margin:0;
+        padding:0;
+        height:100%;font-family: 'Oswald', sans-serif;    
+        overflow-x: hidden;
+        background-color: #595959;
+        scroll-behavior: smooth;
+    }
+    
+
+    body::-webkit-scrollbar{
+        display: none;
+    }
+
     #store{
         display: none;
     }
-    
-    .shopBanner{
+
+    #category{
         display: none;
     }
     
-    header{
+    .headers{
         display: grid;
         height: 3.5em;
         grid-template-columns: auto 3em;
+        box-shadow: 0px 0px 5px 1px black;
     }
 
     .menuBar{
@@ -381,23 +229,27 @@ nav ul li a:hover{
         margin-top: 30%;
     }
     
-    header figcaption img{
+    .headers figcaption img{
         margin-left: 2em;
         margin-top:0.2em;
         width:15%;
     }
 
     nav ul li a{
-        text-align: left;
-        font-size: 1.5em;
+        text-align: center;
+        font-size: 1.9em;
         display: block;
-        padding: 8%;
         color:#818181;
+        padding:50px 0px 0px 0px;
+    }
+
+    nav ul::-webkit-scrollbar{
+        display: none;
     }
 
     .exitButton{
         margin-bottom: 1em;
-        margin: 20%;
+        margin: 20% 20% 0% 20%;
         text-align: right;
     }
 
@@ -411,20 +263,11 @@ nav ul li a:hover{
 
     .bannerHead{    
         height: 100vh;
-    }
-
-    .bannerHeading{
-        padding-top: 12em;
-        padding-left: 4em;
-        
-    }
-
-    .bannerHead{    
-        height: 100vh;
         width:100vw;
         overflow: hidden;
         position: relative;
-        scroll-snap-align: start;
+        background-image: url("Images/7.jpg");
+        backface-visibility: hidden;
     }
 
     .bannerHead video {
@@ -441,171 +284,109 @@ nav ul li a:hover{
         left:0;
         text-align: center;
         color:white;
-        font-family: 'Oswald', sans-serif;
+        font-family: 'Roboto', sans-serif;
         font-weight:700;
     }
 
+    .bannerHeading figcaption a button{
+        background:transparent;
+        margin:20px;
+        font-family: 'Roboto', sans-serif;
+        font-size:0.8em;
+        outline: none;
+        padding:20px;
+        border: none;
+        color: white;
+        transition: 0.5s ease;
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+        border: 1px solid white;
+        box-sizing: border-box;
+        font-weight: bold;
+    }
+
+    .bannerHeading figcaption a button:hover{
+        background-color: white;
+        color:#595959;
+        cursor: pointer;
+    }  
+
+    .shopBanner{
+        width:100%;
+        height:8em;
+        color: #cfbb63;
+        text-align: center;
+        padding:10px 0px 30px 0px;
+        font-size:10px;
+        font-family: 'Roboto Condensed', sans-serif;
+    }
+
+    .shopBanner figcaption{
+        font-size: 50px;
+    }
+
+    .shopBanner a{
+        color:#cfbb63;
+    }
+
+    .shopBanner a:hover{
+        color:orange;
+    }
     
     .furniture{
-        height:100vh;
+        height:50vh;
         width:100%;
-        background-color: white;
-        scroll-snap-align: start;
-        padding:5px;
     }
 
     .shopBack{
-        display: flex;
-        flex-wrap: wrap-reverse;
-        flex-direction: row;
-        margin:4px;
-        background-color: indianred;
-        width:95vw;
-        height:95vh;
+        display: grid;
+        grid-template-rows: auto auto;
+        width:100vw;
+        height:45vh;
     }
 
     .furnitureHeading{
-        font-size:3.5em;
-        font-family: 'Oswald', sans-serif;
-        margin-top:3%;
-        color: white;
-        opacity: 1;
-        margin-right:auto;
-        margin-left:auto;
-        margin-bottom:3%;
+        font-size:30px;
+        font-family: 'Roboto', sans-serif;
+        color: #cfbb63;
+        padding-left: 30px;
+        font-weight: bolder;
+        text-transform: lowercase;
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+
+    .furnitureHeading a{
+        text-decoration: none;
+        color:#cfbb63;
+        text-align: right;
+        padding-right:30px;
+        padding-top:10px;
+        font-size: 15px;
     }
 
     .linksShop{
-        font-size:0.1em;
-        font-family: 'Oswald', sans-serif;
-        font-weight: 700;
-        letter-spacing: 0.18em;
-        text-align: center;
-        color: whitesmoke;
-        font-family: 'Oswald', sans-serif;
-    }
-
-    .linksShop a{
-        text-decoration: none;
-        color:whitesmoke;
-    }
-
-    .linksShop a:hover{
-        color: black;
-        font-family: 'Oswald', sans-serif;
+        display: none;
     }
 
     .shopNow {
-        font-size:0.2em;
-        font-family: 'Oswald', sans-serif;
-        letter-spacing: 2.2em;
-        font-weight: 700;
-        text-align: center;
+        display: none;
     }
 
     .furnitureImages{
-        align-content: center;
+        display: grid;
+        grid-template-columns: auto auto;
     }
 
     .staticImage{
         width:90%;
-        margin-top:5em;
-        margin-left:1em;
+        padding:8px;
+        border-radius: 50px;
     }
 
-    #hide{
-        display: none;
-    }
-
-    .furnitureImages img{
-        transition: 0.4s ease-in-out;
-        
-    }
-
-    .furnitureImages{
-        margin-right:auto;
-        margin-left:auto;
-    }
-    
     .textMiddle{
-        transition: 0.3s ease-in-out;
-        opacity: 0;
-        position: absolute;
-        top:50%;
-        right:10%;
-        text-align: center; 
-        z-index: 1;
         display: none;
-    }
-
-    .textInfo{
-        width:80%;
-        padding: 16px 32px 16px 32px;
-        font-size: 5em;
-        font-family: 'Oswald', sans-serif;
-        background-color: white;
-        color:black;  
-        display: none;
-        
-    }
-
-    #Lighting{
-        letter-spacing: 0.1em;
-        color:black
-    }
-
-    #lighting .furnitureHeading .linksShop a{
-        color:black;
-    }
-
-    #lighting .furnitureHeading .linksShop a:hover{
-        color:darkred;
-    }
-
-    #lighting .furnitureHeading .linksShop{
-        color:black;
-    }
-
-    #lighting .shopNow{
-        color:black;
-    }
-
-    #lighting{
-        background-color: #ffccbc;
-    }
-
-    #Floral{
-        letter-spacing: 0.25em;
-    }
-
-    #flower{
-        background-color: grey;
-    }   
-
-    #table{
-        background-color: white;
-    }
-
-    #table .shopNow{
-        letter-spacing: 2em;
-    }
-
-    #table .furnitureHeading span{
-        letter-spacing: 0.04em;
-    }
-
-    #wall .furnitureHeading{
-        letter-spacing: 0.1em;
-    }
-
-    #decorative .furnitureHeading{
-        margin:20% 0.5em;
-    }
-
-    .contact{
-        height: 100vh;
-        width:100%;
-        background-color: white;
     }
 }
 
@@ -1285,6 +1066,26 @@ nav ul li a:hover{
 
 @media only screen and (min-width:1200px) /*Dimensions higher than 1200px*/{
 
+    #scrollTop {
+        display: none;
+        position: fixed;
+        bottom: 20px;
+        right: 30px;
+        z-index: 99;
+        font-size: 18px;
+        border: none;
+        outline: none;
+        background-color: red;
+        color: white;
+        cursor: pointer;
+        padding: 15px;
+        border-radius: 4px;
+      }
+      
+    #scrollTop:hover {
+        background-color: #555;
+      }
+
     nav{
         display: none;
     }
@@ -1369,6 +1170,7 @@ nav ul li a:hover{
         float: left;
         overflow: hidden;
         padding:30px;
+        transition: 0.4s ease-in-out;
     }
 
     .dropDownMenu .dropDownButton{
@@ -1379,6 +1181,7 @@ nav ul li a:hover{
         font-family: 'Roboto',sans-serif;
         background-color:transparent;
         margin-top:60px;
+        transition: 0.4s ease-in-out;
     }
 
     .dropDownContent{
@@ -1389,7 +1192,10 @@ nav ul li a:hover{
         width: 100%;
         padding:50px;
         z-index: 1;
-        
+        margin-left:auto;
+        margin-right:auto;
+        text-align: center;
+        transition: 0.4s ease-in-out;
     }
 
     .dropDownContent a{
@@ -1419,6 +1225,7 @@ nav ul li a:hover{
     #category p{
         padding:30px;
         margin-top:60px;
+        transition: 0.4s ease-in-out;
     }
 
     #category p:hover{
