--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -14,7 +14,8 @@
             margin:0; padding:0px;
         }
         h1 {
-            padding:10px
+            padding:5px;
+            margin-block-end: 0.2em;
         }
 
         .container1{
@@ -23,7 +24,7 @@
         }
         
         .login {
-            margin:0 auto;
+            margin:20% auto;
             max-width:500px;
         }
         .login-header {
@@ -46,7 +47,7 @@
             box-sizing:border-box;
             padding-top:15px;
             padding-bottom:10%;
-            margin:2% auto;
+            margin: 0;
             text-align:center;
         }
         .login input[type="text"],
