video 73, Checkout User Default Address Done

--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -152,7 +152,12 @@
         <p>Furniture</p>
         
         <p>Wall Art</p>
-        
+
+        <p>All Products</p>
+
+
+
+
         <div class = "dropDownMenu">
             <button class ="dropDownButton"> Florals </button>
             <div class = "dropDownContent">
