change in login

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -78,31 +78,41 @@
         }
 
 
-        .login-form input[type="button"] {
-            height:60px;
+        .damnSon {
+            height:40px;
             width:100px;
-            background: #ff002c;
-            border:1px solid #f2f2f2;
+            background: transparent;
+            border:2px solid #cfbb63;
             border-radius:20px;
-            color: slategrey;
+            color: #cfbb63;
             text-transform:uppercase;
             font-family: 'Ubuntu', sans-serif;
+            transition: 0.4s ease-in-out;
+        }
+
+        .damnSon:hover{
+            background-color: #cfbb63;
+            color: black;
+            font-weight: bolder;
             cursor:pointer;
         }
         
         .sign-up{
             color:#cfbb63;
             margin-left:-70%;
+            font-size: 10px;
             cursor:pointer;
             text-decoration:underline;
             cursor: pointer;
         }
+        
         .no-access {
             color:#cfbb63;
             margin:20px 0px 20px -57%;
             text-decoration:underline;
             cursor:pointer;
         }
+
         .try-again {
             color:#f2f2f2;
             text-decoration:underline;
@@ -168,9 +178,9 @@
         <br>
         {% csrf_token %}
 <!--        <input type="button" value="Login" class="login-button"/>-->
-        <button class="btn btn-outline-info" href="{% url 'Raul-SecondHome' %}" type="submit">Login</button>
+        <button class="damnSon" href="{% url 'Raul-SecondHome' %}" type="submit">Login</button>
 
-        <a class="sign-up" href="{% url 'register' %}">Sign Up!</a>
+        <a class="sign-up" href="{% url 'register' %}"> Don't have an account? </a>
         <br>
         <h6 class="no-access">Can't access your account?</h6>
     </div>
