--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -161,7 +161,7 @@
 </div>
 
     <div class ="bannerHead" id = "mainBanner">
-        <video src="{% static 'Raul/Images/Merch Video V 5.mp4' %}" autoplay loop muted id = "videoBG"></video>
+        <video src="{% static 'Raul/Images/Merch Video V 5.m4v' %}" autoplay loop muted id = "videoBG"></video>
         <div class = "bannerHeading">
             <figcaption> r a ù l  <br> <a href="#shop"><button> explore the shop </button></a></figcaption>
         </div>
