--- a/orders/templates/orders/Checkout.html
+++ b/orders/templates/orders/Checkout.html
@@ -1,64 +1,158 @@
 
-
-
-
+{% extends "Raul/base.html" %}
+{% load static %}
 {% block content %}
-
-
-{% if address_form %}
-<div class='col-sm-6 oull-right'>
-    <h3>Add New Shipping Address</h3>
-    <form method="POST" action='{% url "ajax_add_user_address" %}?next=checkout'>{% csrf_token %}
-        {{ address_form.as_p}}
-
-        <input type="submit" class="btn btn-default" value="Add Shipping Address"/>
-    </form>
-</div>
-{% endif %}
+{% load crispy_forms_tags %}
 
 
 
+<head>
+    <script> src="{% static 'orders/stripe.js' %} " </script>
+    <style media="screen">
+        body, html {
+            height: 100%;
+            background-color: #f7f8f9;
+            color: #6b7c93;
+        }
 
-<form method="POST" action=""> {% csrf_token %}
-{% if current_addresses %}
-<div class='col-sm-6'>
-<h3> Shipping Addresses</h3>
-{% for address in current_addresses %}
+        *, label {
+            font-family: "Helvetica Neue", Helvetica, sans-serif;
+            font-size: 16px;
+            font-variant: normal;
+            padding: 0;
+            margin: 0;
+            -webkit-font-smoothing: antialiased;
+        }
 
-    {% if request.user.userdefaultaddress.shipping.id == address.id %}
-    <input type="radio" name="shipping_address" value="{{ address_id }}" checked="checked"/> {{ address.get_address}} <br/>
-    {% else %}
-<input type="radio" name="shipping_address" value="{{ address_id }}"/> {{ address.get_address}} <br/>
+        button {
+            border: none;
+            border-radius: 4px;
+            outline: none;
+            text-decoration: none;
+            color: #fff;
+            background: #32325d;
+            white-space: nowrap;
+            display: inline-block;
+            height: 40px;
+            line-height: 40px;
+            padding: 0 14px;
+            box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
+            border-radius: 4px;
+            font-size: 15px;
+            font-weight: 600;
+            letter-spacing: 0.025em;
+            text-decoration: none;
+            -webkit-transition: all 150ms ease;
+            transition: all 150ms ease;
+            float: left;
+            margin-left: 12px;
+            margin-top: 28px;
+        }
 
-    {% endif %}
+        button:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 7px 14px rgba(50, 50, 93, .10), 0 3px 6px rgba(0, 0, 0, .08);
+            background-color: #43458b;
+        }
 
-    {% endfor %}
-</div>
-{% endif %}
+        form {
+            padding: 30px;
+            height: 120px;
+        }
+
+        label {
+            font-weight: 500;
+            font-size: 14px;
+            display: block;
+            margin-bottom: 8px;
+        }
+
+        #card-errors {
+            height: 20px;
+            padding: 4px 0;
+            color: #fa755a;
+        }
+
+        .form-row {
+            width: 70%;
+            float: left;
+        }
+
+        .token {
+            color: #32325d;
+            font-family: 'Source Code Pro', monospace;
+            font-weight: 500;
+        }
+
+        .wrapper {
+            width: 670px;
+            margin: 0 auto;
+            height: 100%;
+        }
+
+        #stripe-token-handler {
+            position: absolute;
+            top: 0;
+            left: 25%;
+            right: 25%;
+            padding: 20px 30px;
+            border-radius: 0 0 4px 4px;
+            box-sizing: border-box;
+            box-shadow: 0 50px 100px rgba(50, 50, 93, 0.1),
+            0 15px 35px rgba(50, 50, 93, 0.15),
+            0 5px 15px rgba(0, 0, 0, 0.1);
+            -webkit-transition: all 500ms ease-in-out;
+            transition: all 500ms ease-in-out;
+            transform: translateY(0);
+            opacity: 1;
+            background-color: white;
+        }
+
+        #stripe-token-handler.is-hidden {
+            opacity: 0;
+            transform: translateY(-80px);
+        }
+
+        /**
+         * The CSS shown here will not be introduced in the Quickstart guide, but shows
+         * how you can use CSS to style your Element's container.
+         */
+        .StripeElement {
+            box-sizing: border-box;
+
+            height: 40px;
+
+            padding: 10px 12px;
+
+            border: 1px solid transparent;
+            border-radius: 4px;
+            background-color: white;
+
+            box-shadow: 0 1px 3px 0 #e6ebf1;
+            -webkit-transition: box-shadow 150ms ease;
+            transition: box-shadow 150ms ease;
+        }
+
+        .StripeElement--focus {
+            box-shadow: 0 1px 3px 0 #cfd7df;
+        }
+
+        .StripeElement--invalid {
+            border-color: #fa755a;
+        }
+
+        .StripeElement--webkit-autofill {
+            background-color: #fefde5 !important;
+        }
+    </style>
+</head>
 
 
 
 
-<div class="row">
-
-{% if billing_addresses %}
-<div class="col-sm-6">
-<h3>Billing Addresses</h3>
-{% for address in billing_addresses %}
-
-    {% if request.user.userdefaultaddress.billing.id == address.id %}
-    <input type="radio" name="billing_address" value="{{ address_id }}" checked="checked"/> {{ address.get_address}} <br/>
-    {% else %}
-    <input type="radio" name="billing_address" value="{{ address_id }}"/> {{ address.get_address}} <br/>
-
-    {% endif %}
-{% endfor %}
-</div>
-{% endif %}
+<form method="POST" id="payment-form" action="." > {% csrf_token %}
 
 
-
-</div>
 <!--    <div class="row">-->
 
 <!--        {% if billing_addresses %}-->
@@ -78,10 +172,29 @@
 
     <div class="row" >
         <h3>Credit Card Info</h3>
+        <div class="wrapper">
+            <script src="https://js.stripe.com/v3/"></script>
 
+                <div class="form-row">
+                    <label for="card-element">
+                        Credit or debit card
+                    </label>
+                    <div id="card-element" class="StripeElement StripeElement--empty"><div class="__PrivateStripeElement" style="margin: 0px !important; padding: 0px !important; border: none !important; display: block !important; background: transparent !important; position: relative !important; opacity: 1 !important;"><iframe frameborder="0" allowtransparency="true" scrolling="no" name="__privateStripeFrame5" allowpaymentrequest="true" src="https://js.stripe.com/v3/elements-inner-card-743a1900eebc4d345b0280f62850ffee.html#style[base][color]=%2332325d&amp;style[base][fontFamily]=%22Helvetica+Neue%22%2C+Helvetica%2C+sans-serif&amp;style[base][fontSmoothing]=antialiased&amp;style[base][fontSize]=16px&amp;style[base][::placeholder][color]=%23aab7c4&amp;style[invalid][color]=%23fa755a&amp;style[invalid][iconColor]=%23fa755a&amp;componentName=card&amp;wait=false&amp;rtl=false&amp;keyMode=test&amp;apiKey=pk_test_TYooMQauvdEDq54NiTphI7jx&amp;origin=https%3A%2F%2Fstripe.com&amp;referrer=https%3A%2F%2Fstripe.com%2Fdocs%2Fstripe-js&amp;controllerId=__privateStripeController1" title="Secure payment input frame" style="border: none !important; margin: 0px !important; padding: 0px !important; width: 1px !important; min-width: 100% !important; overflow: hidden !important; display: block !important; user-select: none !important; height: 19.2px;"></iframe><input class="__PrivateStripeElement-input" aria-hidden="true" aria-label=" " autocomplete="false" maxlength="1" style="border: none !important; display: block !important; position: absolute !important; height: 1px !important; top: 0px !important; left: 0px !important; padding: 0px !important; margin: 0px !important; width: 100% !important; opacity: 0 !important; background: transparent !important; pointer-events: none !important; font-size: 16px !important;"></div></div>
+
+                    <!-- Used to display form errors. -->
+                    <div id="card-errors" role="alert"></div>
+                </div>
+
+                <button>Submit Payment</button>
+        </div>
+        <div id="stripe-token-handler" class="is-hidden">Success! Got token: <span class="token"></span></div>
+
+
+        <script type="text/javascript" nonce="">  // Create a Stripe client.
     </div>
 
 
 </form>
+
 
 {% endblock %}
