--- a/orders/templates/orders/Checkout.html
+++ b/orders/templates/orders/Checkout.html
@@ -37,7 +37,7 @@
     }
 
     .StripeElement--webkit-autofill {
-        background-color: #fefde5 !important;
+        background-color: #fefde5 !important}
 
 </style>
 
