--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -178,7 +178,7 @@
     <div class ="bannerHead" id = "mainBanner">
         <video src="{% static 'Raul/Images/Merch Video V 5.m4v' %}" autoplay loop muted id = "videoBG"></video>
         <div class = "bannerHeading">
-            <figcaption> r a ù l  <br> <a href="#shop"><button> explore the shop </button></a></figcaption>
+            <figcaption> r a ù l  <br> <a href="{% url 'Raul-product' %}"><button> explore the shop </button></a></figcaption>
         </div>
     </div>
 
