--- a/orders/templates/orders/Checkout.html
+++ b/orders/templates/orders/Checkout.html
@@ -44,8 +44,80 @@
 <body>
 <script src="https://js.stripe.com/v3/"></script>
 
+{% if address_form %}
+<div class='col-sm-6 oull-right'>
+
+    <h3>Add New Shipping Address</h3>
+    <form method="POST" action='{% url "ajax_add_user_address" %}?next=checkout'>{% csrf_token %}
+        {{ address_form.as_p}}
+
+        <input type="submit" class="btn btn-default" value="Add Shipping Address"/>
+
+        <body>
+        <script src="https://js.stripe.com/v3/"></script>
+
+        <form action="." method="post" id="payment-form">
+            {% csrf_token %}
+            <div class="form-row">
+                <label for="card-element">
+                    Credit or debit card
+                </label>
+                <div id="card-element">
+                    <!-- A Stripe Element will be inserted here. -->
+                </div>
+
+                <!-- Used to display form errors. -->
+                <div id="card-errors" role="alert"></div>
+            </div>
+
+        </form>
+
+    </form>
+</div>
+{% endif %}
+
+<form method="POST" action=""> {% csrf_token %}
+    {% if current_addresses %}
+    <div class='col-sm-6'>
+        <h3> Shipping Addresses</h3>
+        {% for address in current_addresses %}
+
+        {% if request.user.userdefaultaddress.shipping.id == address.id %}
+        <input type="radio" name="shipping_address" value="{{ address_id }}" checked="checked"/> {{ address.get_address}} <br/>
+        {% else %}
+        <input type="radio" name="shipping_address" value="{{ address_id }}"/> {{ address.get_address}} <br/>
+
+        {% endif %}
+
+        {% endfor %}
+    </div>
+</form>
+{% endif %}
+
+<div class="row">
+
+    {% if billing_addresses %}
+    <div class="col-sm-6">
+        <h3>Billing Addresses</h3>
+        {% for address in billing_addresses %}
+
+        {% if request.user.userdefaultaddress.shipping.id == address.id %}
+        <input type="radio" name="billing_address" value="{{ address_id }}" checked="checked"/> {{ address.get_address}} <br/>
+        {% else %}
+        <input type="radio" name="billing_address" value="{{ address_id }}"/> {{ address.get_address}} <br/>
+
+        {% endif %}
+        {% endfor %}
+    </div>
+    {% endif %}
+
+
+
+</div>
+
 <form action="." method="post" id="payment-form">
     {% csrf_token %}
+
     <div class="form-row">
         <label for="card-element">
             Credit or debit card
@@ -60,6 +132,8 @@
 
     <button>Submit Payment</button>
 </form>
+
+
 
 
 
