--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -58,7 +58,11 @@
             <div class="mt-4">
                 <div class="d-flex justify-content-center links">
                     Already have an account? <a href="{% url 'login' %}" class="ml-2">Login</a>
+
                 </div>
+                Forgot Password? <a href="{% url 'password_reset' %}" class="ml-2">Forgot Password</a>
+
+
             </div>
         </div>
     </div>
