--- a/orders/templates/orders/Checkout.html
+++ b/orders/templates/orders/Checkout.html
@@ -76,47 +76,80 @@
 </div>
 {% endif %}
 
-<form method="POST" action=""> {% csrf_token %}
-    {% if current_addresses %}
-    <div class='col-sm-6'>
-        <h3> Shipping Addresses</h3>
-        {% for address in current_addresses %}
+<!--<form method="POST" action=""> {% csrf_token %}-->
+<!--    {% if current_addresses %}-->
+<!--    <div class='col-sm-6'>-->
+<!--        <h3> Shipping Addresses</h3>-->
+<!--        {% for address in current_addresses %}-->
 
-        {% if request.user.userdefaultaddress.shipping.id == address.id %}
-        <input type="radio" name="shipping_address" value="{{ address_id }}" checked="checked"/> {{ address.get_address}} <br/>
-        {% else %}
-        <input type="radio" name="shipping_address" value="{{ address_id }}"/> {{ address.get_address}} <br/>
+<!--        {% if request.user.userdefaultaddress.shipping.id == address.id %}-->
+<!--        <input type="radio" name="shipping_address" value="{{ address_id }}" checked="checked"/> {{ address.get_address}} <br/>-->
+<!--        {% else %}-->
+<!--        <input type="radio" name="shipping_address" value="{{ address_id }}"/> {{ address.get_address}} <br/>-->
 
-        {% endif %}
+<!--        {% endif %}-->
 
-        {% endfor %}
-    </div>
-</form>
-{% endif %}
+<!--        {% endfor %}-->
+<!--    </div>-->
+<!--</form>-->
+<!--{% endif %}-->
 
-<div class="row">
+<!--<div class="row">-->
 
-    {% if billing_addresses %}
-    <div class="col-sm-6">
-        <h3>Billing Addresses</h3>
-        {% for address in billing_addresses %}
+<!--    {% if billing_addresses %}-->
+<!--    <div class="col-sm-6">-->
+<!--        <h3>Billing Addresses</h3>-->
+<!--        {% for address in billing_addresses %}-->
 
-        {% if request.user.userdefaultaddress.shipping.id == address.id %}
-        <input type="radio" name="billing_address" value="{{ address_id }}" checked="checked"/> {{ address.get_address}} <br/>
-        {% else %}
-        <input type="radio" name="billing_address" value="{{ address_id }}"/> {{ address.get_address}} <br/>
+<!--        {% if request.user.userdefaultaddress.shipping.id == address.id %}-->
+<!--        <input type="radio" name="billing_address" value="{{ address_id }}" checked="checked"/> {{ address.get_address}} <br/>-->
+<!--        {% else %}-->
+<!--        <input type="radio" name="billing_address" value="{{ address_id }}"/> {{ address.get_address}} <br/>-->
 
-        {% endif %}
-        {% endfor %}
-    </div>
-    {% endif %}
+<!--        {% endif %}-->
+<!--        {% endfor %}-->
+<!--    </div>-->
+<!--    {% endif %}-->
 
 
 
-</div>
+<!--</div>-->
 
 <form action="." method="post" id="payment-form">
     {% csrf_token %}
+
+    {% if current_addresses %}
+        <div class='col-sm-6'>
+            <h3> Shipping Addresses</h3>
+            {% for address in current_addresses %}
+
+            {% if request.user.userdefaultaddress.shipping.id == address.id %}
+            <input type="radio" name="shipping_address" value="{{ address_id }}" checked="checked"/> {{ address.get_address}} <br/>
+            {% else %}
+            <input type="radio" name="shipping_address" value="{{ address_id }}"/> {{ address.get_address}} <br/>
+
+            {% endif %}
+
+            {% endfor %}
+        </div>
+    {% endif %}
+
+    <div class="row">
+
+        {% if billing_addresses %}
+        <div class="col-sm-6">
+            <h3>Billing Addresses</h3>
+            {% for address in billing_addresses %}
+
+            {% if request.user.userdefaultaddress.shipping.id == address.id %}
+            <input type="radio" name="billing_address" value="{{ address_id }}" checked="checked"/> {{ address.get_address}} <br/>
+            {% else %}
+            <input type="radio" name="billing_address" value="{{ address_id }}"/> {{ address.get_address}} <br/>
+
+            {% endif %}
+            {% endfor %}
+        </div>
+        {% endif %}
 
     <div class="form-row">
         <label for="card-element">
