CHANGES IN BASE AND LOGIN

--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -9,6 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type = "text/css" href="{% static 'Raul/main.css' %}">   
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+
 <body>
 
 <!-- Header Nav Bar-->
