--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -6,9 +6,10 @@
         body {
             background-color: rgba(0,0,0,0.5);
             margin:0px;
-            font-family: 'Ubuntu', sans-serif;
+            font-family: 'Roboto', sans-serif;
             background-size: 100% 110%;
-            color:#cfbb63;            
+            color:#cfbb63;    
+            overflow: hidden;        
         }
         h2, h3, h4, h5, h6, a {
             margin:0; padding:0px;
@@ -16,6 +17,8 @@
         h1 {
             padding:5px;
             margin-block-end: 0.2em;
+            letter-spacing: 5px;
+            font-family: 'Roboto Condensed', sans-serif;
         }
 
         .container1{
@@ -38,11 +41,15 @@
             border-radius:10px;
             box-shadow:0px 0px 10px #000;
         }
+
         .login-form h3 {
             text-align:left;
             margin-left:40px;
+            letter-spacing: 4px;
+            font-family: 'Roboto Condensed', sans-serif;
             color: #cfbb63;
         }
+        
         .login-form {
             box-sizing:border-box;
             padding-top:15px;
@@ -50,12 +57,12 @@
             margin: 0;
             text-align:center;
         }
+
         .login input[type="text"],
         .login input[type="password"] {
             max-width:400px;
             width: 80%;
             line-height:3em;
-            font-family: 'Ubuntu', sans-serif;
             margin:1em 2em;
             border-radius:5px;
             border:2px solid #cfbb63;
@@ -86,7 +93,6 @@
             border-radius:20px;
             color: #cfbb63;
             text-transform:uppercase;
-            font-family: 'Ubuntu', sans-serif;
             transition: 0.4s ease-in-out;
         }
 
@@ -153,7 +159,7 @@
     {{ form.non_field_errors }}
     <div class="login">
     <div class="login-header">
-        <h1>Login</h1>
+        <h1>LOGIN</h1>
     </div>
     <div class="login-form">
 <!--        <h3>Username:</h3>-->
@@ -182,7 +188,7 @@
 
         <a class="sign-up" href="{% url 'register' %}"> Don't have an account? </a>
         <br>
-        <h6 class="no-access">Can't access your account?</h6>
+        <!-- <h6 class="no-access">Can't access your account?</h6> -->
     </div>
 </div>
 <!-- <div class="error-page">
