--- a/orders/templates/orders/Checkout.html
+++ b/orders/templates/orders/Checkout.html
@@ -42,6 +42,7 @@
 </style>
 
 <body>
+<h1>SubTotal = {{ order.get_final_amount }}</h1>
 <script src="https://js.stripe.com/v3/"></script>
 
 {% if address_form %}
