--- a/Raul/templates/Raul/cart.html
+++ b/Raul/templates/Raul/cart.html
@@ -1,4 +1,5 @@
-
+{% extends "Raul/base.html" %}
+{% block content %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -81,6 +82,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
+{% endblock %}
 
 
 
