--- a/Raul/static/Raul/CSS/main.css
+++ b/Raul/static/Raul/CSS/main.css
@@ -26,6 +26,7 @@ a{
     overflow: hidden;
     z-index: 99;
     background: #595959;
+    color:white
 }
 
 .header{
@@ -118,6 +119,10 @@ nav ul li a:hover{
 .exitButton img{
     width: 25px;
     cursor: pointer;
+}
+
+.shopBack{
+    background-color: rgba(0,0,0,0.5);
 }
 
 /* Scroll Bar*/
@@ -828,25 +833,18 @@ nav ul li a:hover{
 }
 
 @media only screen and (min-width:1025px) and (max-width:1200px){
-
-    #store{
-        display: none;
-    }
     
-    .shopBanner{
-        display: none;
-    }
 
     nav{
         display: none;
     }
 
-    header figcaption{
+    .headers figcaption{
         display: none;
     }
 
-    header{
-        background:white; /*Change to transparent*/
+    .headers{
+        background:#595959; /*Change to transparent*/
     }
 
     figure{
@@ -858,8 +856,7 @@ nav ul li a:hover{
 
     figure a{
         margin-right: 2em;
-        color:black;
-        font-family: 'Roboto Condensed';
+        font-family: 'Roboto', sans-serif;
     }
 
     figure p{
@@ -870,6 +867,127 @@ nav ul li a:hover{
         margin-top:0.5em;
         width:7%;
     }
+
+    #store{
+        width:100%;
+        height:0%;
+        overflow: hidden;
+        background-color: rgba(0,0,0,0.95);
+        position: fixed;
+        left:0;
+        top:0;
+        color: #cfbb63;
+        font-family: 'Roboto Condensed', sans-serif;
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        transition: 0.4s ease-in-out;
+    }
+
+    #store p{
+        font-size:4em;
+        padding:0px;
+        letter-spacing: 0.2em;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #store #cross{
+        font-size: 2em;
+    }
+
+    #store #cross:hover{
+        cursor: pointer;
+        color:orange;
+    }
+
+    #category{
+        width: 100%;
+        height:0%;
+        overflow: hidden;
+        background-color: black;
+        position: fixed;
+        left:0;
+        top:0;
+        color: white;
+        font-family: 'Roboto', sans-serif;
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        transition: 0.4s ease-in-out;
+        z-index:98;
+        justify-content: center;
+        max-height: 15%;
+    }
+
+    .dropDownMenu{
+        float: left;
+        overflow: hidden;
+        padding:30px;
+        transition: 0.4s ease-in-out;
+    }
+
+    .dropDownMenu .dropDownButton{
+        border:none;
+        outline:none;
+        color:white;
+        font-size: 12px;
+        font-family: 'Roboto',sans-serif;
+        background-color:transparent;
+        margin-top:80px;
+        transition: 0.4s ease-in-out;
+    }
+
+    .dropDownContent{
+        display: none;
+        position: fixed;
+        left: 0;
+        background-color: black;
+        width: 100%;
+        padding:50px;
+        z-index: 1;
+        margin-left:auto;
+        margin-right:auto;
+        text-align: center;
+        transition: 0.4s ease-in-out;
+    }
+
+    .dropDownContent a{
+        color:white;
+        text-decoration: none;
+        padding:30px;
+        text-align: center;
+        
+    }
+
+    .dropDownContent a:hover{
+        font-family: 'Roboto Condensed', sans-serif;
+        letter-spacing: 0.05em;
+        cursor: pointer;
+    }
+
+    .dropDownButton:hover{
+        font-family: 'Roboto Condensed', sans-serif;
+        letter-spacing: 0.05em;
+        cursor: pointer;
+    }
+
+    .dropDownMenu:hover .dropDownContent{
+        display: block;
+    }
+
+    #category p{
+        padding:30px;
+        margin-top:80px;
+        transition: 0.4s ease-in-out;
+        font-size: 12px;
+    }
+
+    #category p:hover{
+        font-family: 'Roboto Condensed',sans-serif;
+        cursor: pointer;
+    }
+
 
     .bannerHead{    
         height: 100vh;
@@ -897,10 +1015,57 @@ nav ul li a:hover{
         font-weight:700;
     }
 
+    .bannerHeading figcaption a button{
+        background:transparent;
+        margin:20px;
+        font-family: 'Roboto', sans-serif;
+        font-size:0.5em;
+        outline: none;
+        padding:30px;
+        border: none;
+        color: white;
+        transition: 0.5s ease;
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+        border: 1px solid white;
+        box-sizing: border-box;
+        font-weight: bold;
+    }
+
+    .bannerHeading figcaption a button:hover{
+        background-color: white;
+        color:#595959;
+        cursor: pointer;
+    }
+
+    .shopBanner{
+        width:100%;
+        height:450px;
+        scroll-snap-align: start;
+        color: #cfbb63;
+        text-align: center;
+        padding-top:5em;
+        font-family: 'Roboto Condensed', sans-serif;
+    }
+
+    .shopBanner figcaption{
+        font-size:18em;
+    }
+
+    .shopBanner a{
+        font-size:1em;
+        color:#cfbb63;
+    }
+
+    .shopBanner a:hover{
+        color:orange;
+    }
+
+
     .furniture{
         height:800px;
         width:100%;
-        background-color: white;
         scroll-snap-align: start;
         padding:10px;
     }
@@ -909,17 +1074,20 @@ nav ul li a:hover{
         display: flex;
         flex-wrap: nowrap;
         margin:50px;
-        background-color: indianred;
         width:95vw;
-        height:95vh;
+        height:750px;
     }
 
     .furnitureHeading{
         font-size:6em;
         font-family: 'Roboto Condensed';
         margin:30% .5em;
-        color: white;
+        color: #cfbb63;
         opacity: 1;
+    }
+
+    .furnitureHeading .seeMore{
+        display: none;
     }
 
     .linksShop{
@@ -928,17 +1096,17 @@ nav ul li a:hover{
         font-weight: 700;
         letter-spacing: 0.18em;
         text-align: center;
-        color: whitesmoke;
+        color: #cfbb63;
         font-family: 'Roboto Condensed';
     }
 
     .linksShop a{
         text-decoration: none;
-        color:whitesmoke;
+        color:#cfbb63;
     }
 
     .linksShop a:hover{
-        color: black;
+        color: orange;
         font-family: 'Roboto Condensed';
     }
 
@@ -965,68 +1133,13 @@ nav ul li a:hover{
     .furnitureImages:hover .staticImage {
         filter: grayscale(40%) blur(1px);
     }
-    
-    .textMiddle{
-        transition: 0.3s ease-in-out;
-        opacity: 0;
-        position: absolute;
-        top:50%;
-        right:10%;
-        text-align: center; 
-        z-index: 1;
-    }
-
-    .textInfo{
-        width:80%;
-        padding: 16px 32px 16px 32px;
-        font-size: 5em;
-        font-family: 'Roboto Condensed';
-        background-color: white;
-        color:black;  
-        
-    }
-
-    /* .furnitureImages:hover .textMiddle{
-        opacity: 1;
-        cursor: pointer;
-        box-shadow: 0px 0px 10px 1px black;
-    } */
 
     #Lighting{
         letter-spacing: 0.1em;
-        color:black
-    }
-
-    #lighting .furnitureHeading .linksShop a{
-        color:black;
-    }
-
-    #lighting .furnitureHeading .linksShop a:hover{
-        color:darkred;
-    }
-
-    #lighting .furnitureHeading .linksShop{
-        color:black;
-    }
-
-    #lighting .shopNow{
-        color:black;
-    }
-
-    #lighting{
-        background-color: #ffccbc;
     }
 
     #Floral{
         letter-spacing: 0.25em;
-    }
-
-    #flower{
-        background-color: #C96567;
-    }   
-
-    #table{
-        background-color: #86C232;
     }
 
     #table .shopNow{
