--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -34,6 +34,9 @@
                 <p>
                     raul
                 </p>
+                <p>
+                    third
+                </p>
 
 
 
